fix for z-index for cart on homepage

--- a/datausa/assets/scss/elements/_home.scss
+++ b/datausa/assets/scss/elements/_home.scss
@@ -30,6 +30,7 @@ body.home {
 
   #top-nav {
     position: fixed;
+    z-index: 20;
   }
 
   a {
